--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
----
+ï»¿---
 layout: default
-titile: xzben'blog -- ¼ûÖ¤ÎÒ³É³¤µÄ×ã¼£
+titile: xzben'blog -- è§è¯æˆ‘æˆé•¿çš„è¶³è¿¹
 ---
 <h2> {{ page.title }} </h2>
-<p> ×îĞÂÎÄÕÂ </p>
+<p> æœ€æ–°æ–‡ç«  </p>
 <ul>
 	{% for post in site.posts %}
 	<li> {{ post.date | date_to_string }}
