--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-﻿---
-layout: default
-titile: xzben'blog -- 见证我成长的足迹
----
-<h2> {{ page.title }} </h2>
-<p> 最新文章 </p>
-<ul>
-	{% for post in site.posts %}
-	<li> {{ post.date | date_to_string }}
-	<a href="{{ site.baseurl }}{{ post.url }}"> {{ post.title }}</a>
-	</li>
-	<% endfor %>
-</ul>
+﻿	---
+	layout: default
+	title:	我的blog
+	---
+	<h2>{{ page.title}}</h2>
+	<p>最新文章</p>
+	<ul>
+		{% for post in site.posts %}
+		<li>{{ post.date | date_to_string }}
+		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+		</li>
+		{% endfor %}
+	</ul>
