--- a/test.html
+++ b/test.html
@@ -10,4 +10,13 @@ title:	我的blog
 		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 		</li>
 		{% endfor %}
+		
+		{% highlight c++ lineno %}
+		#include<head.h>
+		int main()
+		{
+			printf("hello world!\n");
+			return 0;
+		}
+		{% endhighlight %}
 	</ul>
