--- a/test.html
+++ b/test.html
@@ -10,21 +10,11 @@ title:	我的blog
 		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 		</li>
 		{% endfor %}
-		
-		{% highlight c++ lineno %}
-		#include<head.h>
-		int main()
-		{
-			printf("hello world!\n");
-			return 0;
-		}
-		{% endhighlight %}
-		
-		
+
 		<h4>Category</h4>
 		<ul>
 			{% for category in site.categories %}
-			<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }} {{ category | last | size }}</a>
+			<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }} ( {{ category | last | size }} )</a>
 			</li>
 			{% endfor %}
 </ul>
