--- a/test.html
+++ b/test.html
@@ -10,14 +10,12 @@ title:	我的blog
 		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
 		</li>
 		{% endfor %}
-	</ul>
-	
-	<h4>Category</h4>
-	<ul>
-		//这里使用了 jekyll 语法，会被编译，所以加多个"\"
-		{\% for category in site.categories %\}
-		<li><a href="/categories/{\{ category | first }\}/" title="view all
-	posts">{\{ category | first }\} {\{ category | last | size }\}</a>
-		</li>
-		{\% endfor %\}
+
+		<h4>Category</h4>
+		<ul>
+			{% for category in site.categories %}
+			<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }} ( {{ category | last | size }} )</a>
+			</li>
+			{% endfor %}
+</ul>
 	</ul>
