--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 layout: index
 title:	welcome to xzben'blog
 ---
-	<h2>{{ page.title}}</h2>
-	<p>最新文章</p>
-	<ul>
-		{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }}
-		<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-		</li>
-		{% endfor %}
-	</ul>
+<div id="article_list">
+	<div class="article">
+		<p class="article_title">文章标题</p>
+		<p class="article_property"> 
+			<span class="article_publish_time">2014-04-17</span>
+			<span class="article_author">xzben</span>
+			<span class="article_category">c/c++</span>
+			<span class="article_tag">tags</span>
+		</p>
+		<p class="article_preview">
+			文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
+		</p>
+	</div>
+</div>
