--- a/_posts/2013-01-06-hello-world.html
+++ b/_posts/2013-01-06-hello-world.html
@@ -3,6 +3,7 @@ author: xzben
 layout: article_page
 titile: 你好、githubblog
 category: test
+tag: hello world
 ---
 	<h2>{{ page.title}}</h2>
 	<p>我的第一篇文章</p>
