--- a/_posts/2013-01-06-hello-world.html
+++ b/_posts/2013-01-06-hello-world.html
@@ -5,6 +5,6 @@ titile: 你好、githubblog
 category: test
 tag: hello world
 ---
-	<h2>{{ page.title}}</h2>
+	<h2>{{ page.title }</h2>
 	<p>我的第一篇文章</p>
 	<p>{{ page.date | date_to_string }}</p>
